--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ node_modules/
 .DS_Store
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
