--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 
+# Ignore all logfiles and tempfiles.
+/log/*
+/tmp/*
+!/log/.keep
+!/tmp/.keep
+
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
 config/master.key
@@ -27,6 +33,7 @@ config/master.key
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
 .env
+.env.*
 
 ## Environment normalization:
 /.bundle
@@ -52,13 +59,19 @@ bower.json
 # Ignore node_modules
 node_modules/
 
-.DS_Store
-# Ignore master key for decrypting credentials and more.
-/config/master.key
-
+# Ignore precompiled javascript packs
 /public/packs
 /public/packs-test
-/node_modules
+/public/assets
+
+# Ignore yarn files
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+# Ignore uploaded files in development
+/storage/*
+!/storage/.keep
+/public/uploads
+
+.DS_Store
