--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "blog",
   "private": true,
   "dependencies": {
-    "@primer/css": "^13.2.0",
-    "@rails/webpacker": "4.3.0"
+	  "@rails/actioncable": "^6.0.0",
+	  "@rails/activestorage": "^6.0.0",
+	  "@rails/ujs": "^6.0.0",
+	  "@rails/webpacker": "5.2.1",
+	  "turbolinks": "^5.2.0",
+	  "bootstrap": "^4.6.0",
+	  "jquery": "^3.6.0",
+	  "popper.js": "^1.16.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
