--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "blog",
-  "private": true,
-  "dependencies": {
-	  "@rails/actioncable": "^6.0.0",
-	  "@rails/activestorage": "^6.0.0",
-	  "@rails/ujs": "^6.0.0",
-	  "@rails/webpacker": "5.2.1",
-	  "turbolinks": "^5.2.0",
-	  "bootstrap": "^4.6.0",
-	  "jquery": "^3.6.0",
-	  "popper.js": "^1.16.1"
-  },
-  "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
-  }
+		"name": "blog",
+		"private": true,
+		"dependencies": {
+				"@rails/actioncable": "^6.0.0",
+				"@rails/activestorage": "^6.0.0",
+				"@rails/ujs": "^6.0.0",
+				"@rails/webpacker": "5.2.1",
+				"bootstrap": "^5.0.0-beta3",
+				"jquery": "^3.6.0",
+				"popper.js": "^1.16.1",
+				"turbolinks": "^5.2.0"
+		},
+		"devDependencies": {
+				"webpack-dev-server": "^3.11.2"
+		}
 }
