--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 				"@rails/ujs": "^6.0.0",
 				"@rails/webpacker": "5.2.1",
 				"bootstrap": "^5.0.0-beta3",
+				"bootstrap-icons": "^1.4.0",
 				"jquery": "^3.6.0",
 				"popper.js": "^1.16.1",
 				"turbolinks": "^5.2.0"
