--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 				"@rails/webpacker": "5.2.1",
 				"bootstrap": "^5.0.0-beta3",
 				"bootstrap-icons": "^1.4.0",
+				"@popperjs/core": "^2.9.2",
 				"jquery": "^3.6.0",
-				"popper.js": "^1.16.1",
 				"turbolinks": "^5.2.0"
 		},
 		"devDependencies": {
