--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 				"@rails/actioncable": "^6.0.0",
 				"@rails/activestorage": "^6.0.0",
 				"@rails/ujs": "^6.0.0",
-				"@rails/webpacker": "5.2.1",
-				"bootstrap": "^5.0.0-beta3",
+				"@rails/webpacker": "5.4.3",
+				"bootstrap": "^5.1.1",
 				"bootstrap-icons": "^1.4.0",
 				"@popperjs/core": "^2.9.2",
 				"jquery": "^3.6.0",
