--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"bootstrap": "^5.1.1",
 		"bootstrap-icons": "^1.8.0",
 		"jquery": "^3.6.0",
-		"turbolinks": "^5.2.0"
+		"turbolinks": "^5.2.0",
+		"webpack": "^4.0.0"
 	},
 	"devDependencies": {
 		"webpack-dev-server": "^3"
