--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
 	"private": true,
 	"dependencies": {
 		"@popperjs/core": "^2.9.2",
-		"@rails/actioncable": "^7.0.4",
-		"@rails/activestorage": "^7.0.4",
-		"@rails/ujs": "^6.0.0",
-		"@rails/webpacker": "5.4.3",
 		"bootstrap": "^5.3.0",
 		"bootstrap-icons": "^1.8.0",
 		"jquery": "^3.6.0",
-		"turbolinks": "^5.2.0",
-		"webpack": "^4.0.0"
+		"sass": "^1.52.1"
 	},
 	"scripts": {
 		"build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
