--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"dependencies": {
 		"@popperjs/core": "^2.11.5",
-		"bootstrap": "^5.3.0",
+		"bootstrap": "^5.3.0-alpha1",
 		"bootstrap-icons": "^1.10.3",
 		"jquery": "^3.6.0",
 		"sass": "^1.52.1"
