--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-	"name": "blog",
-	"private": true,
-	"dependencies": {
-		"@popperjs/core": "^2.11.5",
-		"bootstrap": "^5.3.0-alpha1",
-		"bootstrap-icons": "^1.10.3",
-		"jquery": "^3.6.0",
-		"sass": "^1.52.1"
-	},
-	"scripts": {
-		"build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
-	}
+  "name": "blog",
+  "private": true,
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "autoprefixer": "^10.4.21",
+    "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
+    "jquery": "^3.6.0",
+    "nodemon": "^3.1.10",
+    "postcss": "^8.5.3",
+    "postcss-cli": "^11.0.1",
+    "sass": "^1.88.0"
+  },
+  "scripts": {
+    "build:css": "yarn build:css:compile && yarn build:css:prefix",
+    "build:css:compile": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
+    "build:css:prefix": "postcss ./app/assets/builds/application.css --use=autoprefixer --output=./app/assets/builds/application.css",
+    "watch:css": "nodemon --watch ./app/assets/stylesheets/ --ext scss --exec \"yarn build:css\""
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
